--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "expo": "^27.0.1",
     "react": "16.3.1",
     "react-native": "~0.55.2",
+    "react-native-network-info": "^4.0.0",
     "react-native-router-flux": "^4.0.1",
     "react-redux": "^5.0.7",
     "redux": "^4.0.0"
